--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0"
     //Rounded ImageView
     implementation "com.makeramen:roundedimageview:2.3.0"
+
+    // Material DateTime Picker
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 }
